ml/c2v/template/Template2Parser.py
# Generated from Template2.g4 by ANTLR 4.7.1
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
import sys



class Template2Parser ( Parser ):

    grammarFileName = "Template2.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'['", u"']'", u"','", u"'<'", u"'>'", 
                     u"'lower'", u"'='", u"'upper'", u"':'", u"':='", u"'('", 
                     u"')'", u"'for'", u"'in'", u"'if'", u"'else'", u"'void'", 
                     u"'{'", u"'}'", u"'transformedparam'", u"'transformeddata'", 
                     u"'generatedquantities'", u"'functions'", u"'''", u"'?'", 
                     u"'^'", u"'/'", u"'*'", u"'+'", u"'-'", u"'./'", u"'.*'", 
                     u"'<='", u"'>='", u"'!='", u"'=='", u"'&&'", u"'observe'", 
                     u"'posterior'", u"'expectation'", u"<INVALID>", u"'int'", 
                     u"'float'", u"<INVALID>", u"<INVALID>", u"'DIST'", 
                     u"'CONST'", u"'DISTX'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"FUNCTION", u"INTEGERTYPE", u"FLOATTYPE", 
                      u"INT", u"DOUBLE", u"DISTHOLE", u"CONSTHOLE", u"DISTXHOLE", 
                      u"COMPLEX", u"WS", u"ID", u"STRING" ]

    RULE_primitive = 0
    RULE_number = 1
    RULE_dtype = 2
    RULE_array = 3
    RULE_vector = 4
    RULE_dims = 5
    RULE_vectorDIMS = 6
    RULE_decl = 7
    RULE_limits = 8
    RULE_data = 9
    RULE_prior = 10
    RULE_param = 11
    RULE_params = 12
    RULE_distexpr = 13
    RULE_loopcomp = 14
    RULE_for_loop = 15
    RULE_if_stmt = 16
    RULE_else_blk = 17
    RULE_function_call = 18
    RULE_fparam = 19
    RULE_fparams = 20
    RULE_return_or_param_type = 21
    RULE_function_decl = 22
    RULE_block = 23
    RULE_transformedparam = 24
    RULE_transformeddata = 25
    RULE_generatedquantities = 26
    RULE_functions = 27
    RULE_expr = 28
    RULE_assign = 29
    RULE_observe = 30
    RULE_statement = 31
    RULE_query = 32
    RULE_template = 33

    ruleNames =  [ u"primitive", u"number", u"dtype", u"array", u"vector", 
                   u"dims", u"vectorDIMS", u"decl", u"limits", u"data", 
                   u"prior", u"param", u"params", u"distexpr", u"loopcomp", 
                   u"for_loop", u"if_stmt", u"else_blk", u"function_call", 
                   u"fparam", u"fparams", u"return_or_param_type", u"function_decl", 
                   u"block", u"transformedparam", u"transformeddata", u"generatedquantities", 
                   u"functions", u"expr", u"assign", u"observe", u"statement", 
                   u"query", u"template" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    FUNCTION=41
    INTEGERTYPE=42
    FLOATTYPE=43
    INT=44
    DOUBLE=45
    DISTHOLE=46
    CONSTHOLE=47
    DISTXHOLE=48
    COMPLEX=49
    WS=50
    ID=51
    STRING=52

    def __init__(self, input, output=sys.stdout):
        super(Template2Parser, self).__init__(input, output=output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class PrimitiveContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(Template2Parser.PrimitiveContext, self).__init__(parent, invokingState)
            self.parser = parser

        def INTEGERTYPE(self):
            return self.getToken(Template2Parser.INTEGERTYPE, 0)

        def FLOATTYPE(self):
            return self.getToken(Template2Parser.FLOATTYPE, 0)

        def getRuleIndex(self):
            return Template2Parser.RULE_primitive

        def enterRule(self, listener):
            if hasattr(listener, "enterPrimitive"):
                listener.enterPrimitive(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitPrimitive"):
                listener.exitPrimitive(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitPrimitive"):
                return visitor.visitPrimitive(self)
            else:
                return visitor.visitChildren(self)




    def primitive(self):

        localctx = Template2Parser.PrimitiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_primitive)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            _la = self._input.LA(1)
            if not(_la==Template2Parser.INTEGERTYPE or _la==Template2Parser.FLOATTYPE):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NumberContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(Template2Parser.NumberContext, self).__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(Template2Parser.INT, 0)

        def DOUBLE(self):
            return self.getToken(Template2Parser.DOUBLE, 0)

        def CONSTHOLE(self):
            return self.getToken(Template2Parser.CONSTHOLE, 0)

        def vectorDIMS(self):
            return self.getTypedRuleContext(Template2Parser.VectorDIMSContext,0)


        def getRuleIndex(self):
            return Template2Parser.RULE_number

        def enterRule(self, listener):
            if hasattr(listener, "enterNumber"):
                listener.enterNumber(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitNumber"):
                listener.exitNumber(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitNumber"):
                return visitor.visitNumber(self)
            else:
                return visitor.visitChildren(self)




    def number(self):

        localctx = Template2Parser.NumberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_number)
        try:
            self.state = 76
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [Template2Parser.INT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 70
                self.match(Template2Parser.INT)
                pass
            elif token in [Template2Parser.DOUBLE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 71
                self.match(Template2Parser.DOUBLE)
                pass
            elif token in [Template2Parser.CONSTHOLE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 72
                self.match(Template2Parser.CONSTHOLE)
                self.state = 74
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 73
                    self.vectorDIMS()


                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DtypeContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(Template2Parser.DtypeContext, self).__init__(parent, invokingState)
            self.parser = parser

        def primitive(self):
            return self.getTypedRuleContext(Template2Parser.PrimitiveContext,0)


        def dims(self):
            return self.getTypedRuleContext(Template2Parser.DimsContext,0)


        def COMPLEX(self):
            return self.getToken(Template2Parser.COMPLEX, 0)

        def getRuleIndex(self):
            return Template2Parser.RULE_dtype

        def enterRule(self, listener):
            if hasattr(listener, "enterDtype"):
                listener.enterDtype(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitDtype"):
                listener.exitDtype(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitDtype"):
                return visitor.visitDtype(self)
            else:
                return visitor.visitChildren(self)




    def dtype(self):

        localctx = Template2Parser.DtypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_dtype)
        try:
            self.state = 85
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 78
                self.primitive()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 79
                self.primitive()
                self.state = 80
                self.match(Template2Parser.T__0)
                self.state = 81
                self.dims()
                self.state = 82
                self.match(Template2Parser.T__1)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 84
                self.match(Template2Parser.COMPLEX)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArrayContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(Template2Parser.ArrayContext, self).__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(Template2Parser.ExprContext)
            else:
                return self.getTypedRuleContext(Template2Parser.ExprContext,i)


        def array(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(Template2Parser.ArrayContext)
            else:
                return self.getTypedRuleContext(Template2Parser.ArrayContext,i)


        def vector(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(Template2Parser.VectorContext)
            else:
                return self.getTypedRuleContext(Template2Parser.VectorContext,i)


        def getRuleIndex(self):
            return Template2Parser.RULE_array

        def enterRule(self, listener):
            if hasattr(listener, "enterArray"):
                listener.enterArray(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitArray"):
                listener.exitArray(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitArray"):
                return visitor.visitArray(self)
            else:
                return visitor.visitChildren(self)




    def array(self):

        localctx = Template2Parser.ArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_array)
        self._la = 0 # Token type
        try:
            self.state = 122
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 87
                self.match(Template2Parser.T__0)
                self.state = 88
                self.expr(0)
                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==Template2Parser.T__2:
                    self.state = 89
                    self.match(Template2Parser.T__2)
                    self.state = 90
                    self.expr(0)
                    self.state = 95
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 96
                self.match(Template2Parser.T__1)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 98
                self.match(Template2Parser.T__0)
                self.state = 99
                self.array()
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==Template2Parser.T__2:
                    self.state = 100
                    self.match(Template2Parser.T__2)
                    self.state = 101
                    self.array()
                    self.state = 106
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 107
                self.match(Template2Parser.T__1)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 109
                self.match(Template2Parser.T__0)
                self.state = 110
                self.vector()
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==Template2Parser.T__2:
                    self.state = 111
                    self.match(Template2Parser.T__2)
                    self.state = 112
                    self.vector()
                    self.state = 117
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 118
                self.match(Template2Parser.T__1)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 120
                self.match(Template2Parser.T__0)
                self.state = 121
                self.match(Template2Parser.T__1)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VectorContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(Template2Parser.VectorContext, self).__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(Template2Parser.ExprContext)
            else:
                return self.getTypedRuleContext(Template2Parser.ExprContext,i)


        def vector(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(Template2Parser.VectorContext)
            else:
                return self.getTypedRuleContext(Template2Parser.VectorContext,i)


        def array(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(Template2Parser.ArrayContext)
            else:
                return self.getTypedRuleContext(Template2Parser.ArrayContext,i)


        def getRuleIndex(self):
            return Template2Parser.RULE_vector

        def enterRule(self, listener):
            if hasattr(listener, "enterVector"):
                listener.enterVector(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitVector"):
                listener.exitVector(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitVector"):
                return visitor.visitVector(self)
            else:
                return visitor.visitChildren(self)




    def vector(self):

        localctx = Template2Parser.VectorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_vector)
        self._la = 0 # Token type
        try:
            self.state = 159
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                self.match(Template2Parser.T__3)
                self.state = 125
                self.expr(0)
                self.state = 130
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==Template2Parser.T__2:
                    self.state = 126
                    self.match(Template2Parser.T__2)
                    self.state = 127
                    self.expr(0)
                    self.state = 132
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 133
                self.match(Template2Parser.T__4)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 135
                self.match(Template2Parser.T__3)
                self.state = 136
                self.vector()
                self.state = 141
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==Template2Parser.T__2:
                    self.state = 137
                    self.match(Template2Parser.T__2)
                    self.state = 138
                    self.vector()
                    self.state = 143
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 144
                self.match(Template2Parser.T__4)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 146
                self.match(Template2Parser.T__3)
                self.state = 147
                self.array()
                self.state = 152
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==Template2Parser.T__2:
                    self.state = 148
                    self.match(Template2Parser.T__2)
                    self.state = 149
                    self.array()
                    self.state = 154
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 155
                self.match(Template2Parser.T__4)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 157
                self.match(Template2Parser.T__3)
                self.state = 158
                self.match(Template2Parser.T__4)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DimsContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(Template2Parser.DimsContext, self).__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(Template2Parser.ExprContext)
            else:
                return self.getTypedRuleContext(Template2Parser.ExprContext,i)


        def getRuleIndex(self):
            return Template2Parser.RULE_dims

        def enterRule(self, listener):
            if hasattr(listener, "enterDims"):
                listener.enterDims(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitDims"):
                listener.exitDims(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitDims"):
                return visitor.visitDims(self)
            else:
                return visitor.visitChildren(self)




    def dims(self):

        localctx = Template2Parser.DimsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_dims)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.expr(0)
            self.state = 166
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==Template2Parser.T__2:
                self.state = 162
                self.match(Template2Parser.T__2)
                self.state = 163
                self.expr(0)
                self.state = 168
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VectorDIMSContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(Template2Parser.VectorDIMSContext, self).__init__(parent, invokingState)
            self.parser = parser

        def dims(self):
            return self.getTypedRuleContext(Template2Parser.DimsContext,0)


        def getRuleIndex(self):
            return Template2Parser.RULE_vectorDIMS

        def enterRule(self, listener):
            if hasattr(listener, "enterVectorDIMS"):
                listener.enterVectorDIMS(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitVectorDIMS"):
                listener.exitVectorDIMS(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitVectorDIMS"):
                return visitor.visitVectorDIMS(self)
            else:
                return visitor.visitChildren(self)




    def vectorDIMS(self):

        localctx = Template2Parser.VectorDIMSContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_vectorDIMS)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self.match(Template2Parser.T__3)
            self.state = 170
            self.dims()
            self.state = 171
            self.match(Template2Parser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(Template2Parser.DeclContext, self).__init__(parent, invokingState)
            self.parser = parser

        def dtype(self):
            return self.getTypedRuleContext(Template2Parser.DtypeContext,0)


        def ID(self):
            return self.getToken(Template2Parser.ID, 0)

        def limits(self):
            return self.getTypedRuleContext(Template2Parser.LimitsContext,0)


        def dims(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(Template2Parser.DimsContext)
            else:
                return self.getTypedRuleContext(Template2Parser.DimsContext,i)


        def getRuleIndex(self):
            return Template2Parser.RULE_decl

        def enterRule(self, listener):
            if hasattr(listener, "enterDecl"):
                listener.enterDecl(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitDecl"):
                listener.exitDecl(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitDecl"):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = Template2Parser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self.dtype()
            self.state = 175
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==Template2Parser.T__3:
                self.state = 174
                self.limits()


            self.state = 181
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==Template2Parser.T__0:
                self.state = 177
                self.match(Template2Parser.T__0)
                self.state = 178
                self.dims()
                self.state = 179
                self.match(Template2Parser.T__1)


            self.state = 183
            self.match(Template2Parser.ID)
            self.state = 188
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==Template2Parser.T__0:
                self.state = 184
                self.match(Template2Parser.T__0)
                self.state = 185
                self.dims()
                self.state = 186
                self.match(Template2Parser.T__1)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LimitsContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(Template2Parser.LimitsContext, self).__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(Template2Parser.ExprContext)
            else:
                return self.getTypedRuleContext(Template2Parser.ExprContext,i)


        def getRuleIndex(self):
            return Template2Parser.RULE_limits

        def enterRule(self, listener):
            if hasattr(listener, "enterLimits"):
                listener.enterLimits(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitLimits"):
                listener.exitLimits(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitLimits"):
                return visitor.visitLimits(self)
            else:
                return visitor.visitChildren(self)




    def limits(self):

        localctx = Template2Parser.LimitsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_limits)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 190
            self.match(Template2Parser.T__3)
            self.state = 205
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.state = 191
                self.match(Template2Parser.T__5)
                self.state = 192
                self.match(Template2Parser.T__6)
                self.state = 193
                self.expr(0)
                self.state = 194
                self.match(Template2Parser.T__2)
                self.state = 195
                self.match(Template2Parser.T__7)
                self.state = 196
                self.match(Template2Parser.T__6)
                self.state = 197
                self.expr(0)
                pass

            elif la_ == 2:
                self.state = 199
                self.match(Template2Parser.T__5)
                self.state = 200
                self.match(Template2Parser.T__6)
                self.state = 201
                self.expr(0)
                pass

            elif la_ == 3:
                self.state = 202
                self.match(Template2Parser.T__7)
                self.state = 203
                self.match(Template2Parser.T__6)
                self.state = 204
                self.expr(0)
                pass


            self.state = 207
            self.match(Template2Parser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DataContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(Template2Parser.DataContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(Template2Parser.ID, 0)

        def dtype(self):
            return self.getTypedRuleContext(Template2Parser.DtypeContext,0)


        def expr(self):
            return self.getTypedRuleContext(Template2Parser.ExprContext,0)


        def array(self):
            return self.getTypedRuleContext(Template2Parser.ArrayContext,0)


        def distexpr(self):
            return self.getTypedRuleContext(Template2Parser.DistexprContext,0)


        def vector(self):
            return self.getTypedRuleContext(Template2Parser.VectorContext,0)


        def dims(self):
            return self.getTypedRuleContext(Template2Parser.DimsContext,0)


        def getRuleIndex(self):
            return Template2Parser.RULE_data

        def enterRule(self, listener):
            if hasattr(listener, "enterData"):
                listener.enterData(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitData"):
                listener.exitData(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitData"):
                return visitor.visitData(self)
            else:
                return visitor.visitChildren(self)




    def data(self):

        localctx = Template2Parser.DataContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_data)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 224
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
            if la_ == 1:
                self.state = 209
                self.match(Template2Parser.ID)
                self.state = 210
                self.match(Template2Parser.T__8)
                self.state = 211
                self.dtype()
                pass

            elif la_ == 2:
                self.state = 212
                self.match(Template2Parser.ID)
                self.state = 213
                self.match(Template2Parser.T__8)
                self.state = 214
                self.expr(0)
                pass

            elif la_ == 3:
                self.state = 215
                self.match(Template2Parser.ID)
                self.state = 216
                self.match(Template2Parser.T__8)
                self.state = 217
                self.array()
                pass

            elif la_ == 4:
                self.state = 218
                self.match(Template2Parser.ID)
                self.state = 219
                self.match(Template2Parser.T__8)
                self.state = 220
                self.distexpr()
                pass
